--- a/demo/src/main/resources/static/styles.css
+++ b/demo/src/main/resources/static/styles.css
@@ -96,12 +96,14 @@ body {
     -------------------------------------------
 */
 .welcome-section {
-    background-color: #3a3a3a;
+    background-color: #343434;
     color: #fff;
     padding: 80px 60px;
     margin-bottom: 50px;
     border-radius: 0;
     box-shadow: none;
+    width: 100%;
+    height: 45vh;
 }
 
 .welcome-section h1 {
@@ -109,12 +111,14 @@ body {
     font-weight: 700;
     color: #fff;
     margin-bottom: 8px;
+    margin-left: 40px;
 }
 
 .welcome-section p {
     font-size: 16px;
     color: #d0d0d0;
     font-weight: 300;
+    margin-left: 40px;
 }
 
 /*
