--- a/demo/src/main/resources/static/register.css
+++ b/demo/src/main/resources/static/register.css
@@ -13,3 +13,16 @@
 .form-group textarea {
     resize: vertical; 
 }
+.register-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, sans-serif;
+    background-color: #2f2d2d;
+    color: #FAFAFA;
+    justify-content: center;
+    align-items: center;
+    display: inline-block;
+    width: 150px;
+    margin-left: 130px;
+}
